testdata/not_valid/key_not_uniq.out
key_not_uniq.kevs:3: error: parse: key 'x' is not unique for current table
